# deepstream-IVA

./: .clang-format  .env  .gitignore  Doxyfile  Makefile  README.md
.build/builder/camera/: Dockerfile
.build/builder/camera/scripts/: rtsp_server.py
.build/builder/iva/: Dockerfile  supervisord.conf
.build/builder/iva/ansible/: ansible.cfg  install_deps.yml  inventory.yml
.build/builder/iva/ansible/tasks/: apt.yml  cmake.yml  env.yml  lexLib.yml  messaging.yml  vcpkg.yml  yolo.yml
.build/builder/iva/apt/: general.apt  gstreamer.apt
.build/builder/iva/scripts/: dl_deepstream_yolo.sh  healthcheck.sh  install_cmake.sh  install_messaging.sh  install_vcpkg.sh
.build/builder/iva/systemd/: README.md  docker-video_pipeline.service
.build/builder/kafka/: Dockerfile  README.md
.build/builder/kafka/configs/: supervisord.conf  zookeeper.properties
.build/builder/kafka/scripts/: install_kafka.sh  start.sh
.build/builder/kafka/systemd/: README.md
.build/project_setup/: install_nvidia-runtime.sh  project.apt  setup.sh
.docker/: wait_until_kafka_starts.sh
.docker/camera/: Dockerfile
.docker/camera/apt/: gstreamer.pkg  nginx.pkg
.docker/camera/conf/: nginx_rtsp.conf  supervisord.conf
.docker/camera/scripts/: rtsp_server.py
.docker/iva/: Dockerfile  prod.Dockerfile
.docker/iva/apt/: opencv.pkglist  project.pkglist
.docker/iva/scripts/: dl_deepstream_yolo.sh  install.sh  install_cmake.sh  install_cudart.sh  install_messaging.sh  install_opencv.sh  set_env.sh
.docker/kafka/: Dockerfile
.docker/kafka/configs/: kafka-server-SSL.properties  kafka-server.properties
.docker/kafka/kafkacat/: Dockerfile
.docker/kafka/scripts/: install_kafka.sh  update_configs.sh  wait_until_zk_starts.sh
.docker/kafka/systemd/: docker-kafka.service
.iva/: README.md  folder.md  iva.md
.iva/configs/: config.json
.iva/model/: detection.yml  tracker.yml
.iva/model/face_detection/: detection_face.yml
.iva/model/faciallandmark/: classifier.yml  detection.yml  facenet.etlt_b1_gpu0_int8.engine  faciallandmarks.etlt_b1_gpu0_fp32.engine
.iva/model/nvds/: README.md  detection.yml
.iva/model/peopleSegNet/: README.md  detection.yml  labels.txt
.iva/model/pipeline/: facial_file.yml  nvds.yml
.iva/model/yolo/: README.md  yolov5s.yml  yolov8s.yml
docs/: README.md  kafkaTLS.md  models.md
iva/: CMakeLists.txt  README.md  main.cpp
iva/cmake/: date.cmake  glog.cmake  gstreamer.cmake  kafka.cmake  nlohmannjson.cmake  nvds.cmake  opencv.cmake  threadpool.cmake  uuid.cmake  yaml.cmake
iva/configs/: config.json  detection.yml  test_config.json  tracker.yml
iva/configs/pipeline/: facial.yml  nvds_file.yml
iva/modules/application/: Application.cpp  Application.h  ApplicationContext.cpp  ApplicationContext.h  CMakeLists.txt
iva/modules/application/test/: CMakeLists.txt  t_ApplicationContext.cpp
iva/modules/core/: CMakeLists.txt
iva/modules/core/base/: BaseComponent.cpp  BaseComponent.h  CMakeLists.txt
iva/modules/core/common/: CMakeLists.txt  errors.hpp  logging.hpp
iva/modules/core/event/: CMakeLists.txt  Event.cpp  Event.h  Mediator.cpp  Mediator.h
iva/modules/gst/: CMakeLists.txt
iva/modules/gst/pipeline/: CMakeLists.txt  Pipeline.cpp  Pipeline.h  discoverer.hpp  pipelineUtils.hpp  yamlParser.hpp
iva/modules/gst/pipeline/test/: CMakeLists.txt  t_Pipeline.cpp
iva/modules/gst/processing/: CMakeLists.txt  Processing.cpp  Processing.h  callbacks.hpp  processUtils.hpp  reference.txt
iva/modules/gst/processing/test/: CMakeLists.txt  t_Procesing.cpp
iva/modules/messaging/: CMakeLists.txt  KafkaBroker.cpp  KafkaBroker.h
iva/modules/messaging/test/: CMakeLists.txt  t_KafkaBroker.cpp  t_main.cpp
iva/modules/softwareLicense/: CMakeLists.txt  SoftwareLicense.cpp  SoftwareLicense.h
iva/modules/softwareLicense/licenses/: security.json
iva/utils/: download_Dsmodels.sh  download_models.sh  gst_launch.sh  payload-sample.json
